--- a/Dashboard/Areas/TeamEntity/Views/Player/Index.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Player/Index.cshtml
@@ -57,7 +57,16 @@
                                     <h4 class="card-title"> @ViewData["Title"]</h4>
 
                                 </div>
+                                  <p class="m-2 demo-inline-spacing">
+                                <a class="btn btn-primary me-1" data-bs-toggle="collapse" href="#AdvancedFilter" role="button" aria-expanded="false" aria-controls="AdvancedFilter">
+                                    <i data-feather='filter'></i>
+                                    @Localizer.Get("Advanced Search")
+                                </a>
 
+                            </p>
+                            @{
+                                await Html.RenderPartialAsync("../Player/Filter", Model, ViewData);
+                            }
                                 <div class="card-datatable">
                                     <table class="datatables datatables-ajax table table-responsive table">
                                         <thead>
@@ -187,7 +196,11 @@ else
                         contentType: "application/json",
                         dataType: "json",
                         data: function (data) {
-                            data.Fk_Team = @Model.Fk_Team;
+                           data.Fk_Team = $("#Fk_Team").length > 0 ? $("#Fk_Team").val() : @Model.Fk_Team;
+                            data.Fk_PlayerPosition = $("#Fk_PlayerPosition").length > 0 ? $("#Fk_PlayerPosition").val() : @Model.Fk_PlayerPosition;
+                            data.CreatedAtFrom = $("#CreatedAtFrom").length > 0 ? $("#CreatedAtFrom").val() : '@Model.CreatedAtFrom';
+                            data.CreatedAtTo = $("#CreatedAtTo").length > 0 ? $("#CreatedAtTo").val() : '@Model.CreatedAtTo';
+
                             return JSON.stringify(data);
                         }
                     },
