--- a/Dashboard/Areas/TeamEntity/Views/Team/Index.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Team/Index.cshtml
@@ -54,7 +54,16 @@
                                 <h4 class="card-title"> @ViewData["Title"]</h4>
 
                             </div>
-                       
+                         <p class="m-2 demo-inline-spacing">
+                                <a class="btn btn-primary me-1" data-bs-toggle="collapse" href="#AdvancedFilter" role="button" aria-expanded="false" aria-controls="AdvancedFilter">
+                                    <i data-feather='filter'></i>
+                                    @Localizer.Get("Advanced Search")
+                                </a>
+
+                            </p>
+                            @{
+                                await Html.RenderPartialAsync("../Team/Filter", Model, ViewData);
+                            }
                             <div class="card-datatable">
                                 <table class="datatables datatables-ajax table table-responsive table">
                                     <thead>
@@ -118,7 +127,9 @@
                         contentType: "application/json",
                         dataType: "json",
                         data: function(data) {
-                          
+                             data.CreatedAtFrom = $("#CreatedAtFrom").length > 0 ? $("#CreatedAtFrom").val() : '@Model.CreatedAtFrom';
+                            data.CreatedAtTo = $("#CreatedAtTo").length > 0 ? $("#CreatedAtTo").val() : '@Model.CreatedAtTo';
+
                             return JSON.stringify(data);
                         }
                     },
