--- a/Dashboard/Areas/UserEntity/Views/User/Index.cshtml
+++ b/Dashboard/Areas/UserEntity/Views/User/Index.cshtml
@@ -44,7 +44,17 @@
                             <div class="card-header border-bottom">
                                 <h4 class="card-title"> @ViewData["Title"]</h4>
                             </div>
-                         
+                           <p class="m-2 demo-inline-spacing">
+                                <a class="btn btn-primary me-1" data-bs-toggle="collapse" href="#AdvancedFilter" role="button" aria-expanded="false" aria-controls="AdvancedFilter">
+                                    <i data-feather='filter'></i>
+                                    @Localizer.Get("Advanced Search")
+                                </a>
+
+                            </p>
+                            @{
+                                await Html.RenderPartialAsync("../User/Filter", Model, ViewData);
+                            }
+
                             <div class="card-datatable">
                                 <table class="datatables datatables-ajax table table-responsive table">
                                     <thead>
@@ -101,10 +111,7 @@
                         data.Id = @Model.Id;
                         data.CreatedAtFrom =$("#CreatedAtFrom").length > 0 ? $("#CreatedAtFrom").val() : '@Model.CreatedAtFrom';
                         data.CreatedAtTo =$("#CreatedAtTo").length > 0 ? $("#CreatedAtTo").val() : '@Model.CreatedAtTo';
-                        data.HasAccount =$("#HasAccount").length > 0 ? $("#HasAccount").val() : '@Model.HasAccount';
-                           data.Fk_EnterpriseType =$("#Fk_EnterpriseType").length > 0 ?$("#Fk_EnterpriseType").val() : @Model.Fk_EnterpriseType;
-                        data.Fk_Governerate =$("#Fk_Governerate").length > 0 ?$("#Fk_Governerate").val(): @Model.Fk_Governerate;
-                        data.Fk_Enterprise =$("#Fk_Enterprise").length > 0 ?$("#Fk_Enterprise").val() : @Model.Fk_Enterprise;
+
                         return JSON.stringify(data);
                     }
                 },
