--- a/Dashboard/Areas/PlayerScoreEntity/Views/PlayerGameWeak/Details.cshtml
+++ b/Dashboard/Areas/PlayerScoreEntity/Views/PlayerGameWeak/Details.cshtml
@@ -15,19 +15,19 @@
         <div class="col-xl-7 col-12">
             <dl class="row mb-0">
 
-                <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.GameWeak.Season):</dt>
+                @*<dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.GameWeak.Season):</dt>
                 <dd class="col-sm-8 mb-1">
                     <a href="/SeasonEntity/Season/Profile/@Model.GameWeak.Fk_Season" target="_blank">@Model.GameWeak.Season.Name</a>
 
-                </dd>
+                </dd>*@
 
             </dl>
         </div>
         <div class="col-xl-5 col-12">
             <dl class="row mb-0">
 
-                <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.GameWeak):</dt>
-                <dd class="col-sm-8 mb-1">@Model.GameWeak.Name</dd>
+                @*<dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.GameWeak):</dt>
+                <dd class="col-sm-8 mb-1">@Model.GameWeak.Name</dd>*@
 
                 <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.Ranking):</dt>
                 <dd class="col-sm-8 mb-1">@Model.Ranking</dd>
