--- a/Dashboard/Areas/PlayerScoreEntity/Views/PlayerGameWeak/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/PlayerScoreEntity/Views/PlayerGameWeak/CreateOrEdit.cshtml
@@ -52,14 +52,14 @@
                                                 </select>
                                             </div>
                                         </div>
-                                        <div class="col-md-4 col-12">
+                                        @*<div class="col-md-4 col-12">
                                             <div class="mb-1">
                                                 <label asp-for="Fk_GameWeak" class="form-label"></label>
                                                 <select asp-for="Fk_GameWeak" class="select2 form-select" asp-items="@(new SelectList(ViewData["GameWeak"] as Dictionary<string,string>,"Key","Value"))">
                                                 </select>
                                                 <span asp-validation-for="Fk_GameWeak" class="text-danger"></span>
                                             </div>
-                                        </div>
+                                        </div>*@
                                         <div class="col-md-4 col-12">
                                             <div class="mb-1">
                                                 <label asp-for="Ranking" class="form-label"></label>
