--- a/Dashboard/Areas/AccountEntity/Views/Account/Index.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/Index.cshtml
@@ -178,8 +178,8 @@
 
                             }
                         },
-                        { data: "nationality.name" },
-                        { data: "country.name" },
+                        { data: "nationality.name",  orderable: false },
+                        { data: "country.name",  orderable: false },
 
                         { data: "phoneNumber" },
                         { data: "emailAddress" },
