--- a/Dashboard/Areas/StandingsEntity/Views/Standings/Index.cshtml
+++ b/Dashboard/Areas/StandingsEntity/Views/Standings/Index.cshtml
@@ -94,6 +94,7 @@
 
                                             </th>
                                             <th>@Html.DisplayNameFor(model => row.Team)</th>
+                                            <th>@Html.DisplayNameFor(model => row.Points)</th>
                                             <th>@Html.DisplayNameFor(model => row.Season)</th>
                                             <th>@Html.DisplayNameFor(model => row.GamesWon)</th>
                                             <th>@Html.DisplayNameFor(model => row.GamesLost)</th>
@@ -137,15 +138,15 @@
                             data.Fk_Team = $("#Fk_Team").length > 0 ? $("#Fk_Team").val() : @Model.Fk_Team;
                             data.CreatedAtFrom = $("#CreatedAtFrom").length > 0 ? $("#CreatedAtFrom").val() : '@Model.CreatedAtFrom';
                             data.CreatedAtTo = $("#CreatedAtTo").length > 0 ? $("#CreatedAtTo").val() : '@Model.CreatedAtTo';
-
+                            
                             return JSON.stringify(data);
                         }
                     },
                     // Columns Setups
                     columns: [
                         { data: "id" },
-                                                {
-                            data: "team",
+                        {
+                            data: "team", orderable: false,
                             render: function (data, type, row) {
                                 var span = '';
 
@@ -173,12 +174,13 @@
 
                             }
                         },
-                         { data: "season.name" },
-                        { data: "gamesWon" },
-                        { data: "gamesLost" },
-                        { data: "gamesEven" },
-                        { data: "for" },
-                        { data: "against" },
+                         { data: "points", orderable: false, },
+                         { data: "season.name", orderable: false, },
+                        { data: "gamesWon", orderable: false, },
+                        { data: "gamesLost", orderable: false, },
+                        { data: "gamesEven", orderable: false, },
+                        { data: "for", orderable: false, },
+                        { data: "against", orderable: false, },
                         { data: "createdAt" },
                         { data: "id" },
                     ]
