account team edit

--- a/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Profile.cshtml
+++ b/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Profile.cshtml
@@ -6,7 +6,7 @@
     var accountTeamPlayerGameWeak = new AccountTeamPlayerGameWeakDto();
     var accountTeamPlayer = new AccountTeamPlayerDto();
     var playerTransfer = new PlayerTransferDto();
-    ViewData["Title"] = Localizer.Get("AccountTeam");
+    ViewData["Title"] = Localizer.Get("Account Teams");
     ViewBag.useModels = true;
 }
 
@@ -25,7 +25,7 @@
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
 
-                                    <a href="/AccountTeamEntity/AccountTeam/Index">@Localizer.Get("AccountTeams")</a>
+                                    <a href="/AccountTeamEntity/AccountTeam/Index">@Localizer.Get("Account Teams")</a>
 
                                 </li>
                                 <li class="breadcrumb-item active">
