--- a/Dashboard/Areas/SeasonEntity/Views/Season/Details.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/Season/Details.cshtml
@@ -41,7 +41,8 @@
                 <table class="table">
                     <thead>
                         <tr>
-                         <th>@Html.DisplayNameFor(model => gameWeak.Name)</th>
+                         @* <th>@Html.DisplayNameFor(model => gameWeak.Name)</th> *@
+                         <th>@Localizer.Get("Week Number")</th>
                             <th>@Html.DisplayNameFor(model => gameWeak._365_GameWeakId)</th>
                         </tr>
                     </thead>
